trunk/Archive2/96/3a7db6172a2856/output
main.cpp:8:1: error: expected expression
template<class T> using ptr = T*; 
^
main.cpp:10:1: error: use of undeclared identifier 'ptr'
ptr<int> x;
^
main.cpp:10:8: error: expected '(' for function-style cast or type construction
ptr<int> x;
    ~~~^
main.cpp:10:10: error: use of undeclared identifier 'x'
ptr<int> x;
         ^
4 errors generated.
