trunk/Archive2/96/3a7db6172a2856/main.cpp
#include <iostream>
#include <string>
#include <vector>

int main()
{
// template type alias
template<class T> using ptr = T*; 
// the name 'ptr<T>' is now an alias for pointer to T
ptr<int> x;
}
